--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "homepage": "https://github.com/PragmaticBeaver/pretty-mixer#readme",
   "devDependencies": {
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8"
-  }
+  },
+  "dependencies": {}
 }
