fix: ESlint using random node version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,5 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "git.ignoreLimitWarning": true,
   "editor.tabSize": 2,
+  "eslint.runtime": "node"
 }
