--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "stylelint": "^15.8.0",
+    "stylelint-config-recess-order": "^4.2.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-order": "^6.0.3"
   },
   "dependencies": {}
 }
