--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,6 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - name: "Create release"
-        uses: "./../actions/create-relase"
+        uses: "./../actions/release"
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
