--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
                 generate_release_notes: true,
                 name: process.env.RELEASE_TAG,
                 owner: context.repo.owner,
-                prerelease: process.env.RELEASE_TAG.includes('alpha') ? true : false,
+                prerelease: process.env.RELEASE_TAG.includes('-alpha') || process.env.RELEASE_TAG.includes('-beta') || process.env.RELEASE_TAG.includes('-rc') ? true : false,
                 repo: context.repo.repo,
                 tag_name: process.env.RELEASE_TAG,
               });
