--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,20 +3,34 @@ name: "Release"
 run-name: "Build release"
 on:
   push:
-    branches:
-      - main
     tags:
-      - "v*.*.*"
+      - "**"
 jobs:
   release:
     name: "Release"
     runs-on: "ubuntu-latest"
     permissions: write-all
     steps:
+      - name: "Determine tag"
+        run: 'echo "RELEASE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV'
       - name: "Create release"
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        uses: "actions/github-script@v6"
         with:
-          files: |
-            module.json
-            LICENSE
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          script: |
+            try {
+              const response = await github.rest.repos.createRelease({
+                draft: false,
+                generate_release_notes: true,
+                name: process.env.RELEASE_TAG,
+                owner: context.repo.owner,
+                prerelease: process.env.RELEASE_TAG.includes('-alpha') || process.env.RELEASE_TAG.includes('-beta') || process.env.RELEASE_TAG.includes('-rc') ? true : false,
+                repo: context.repo.repo,
+                tag_name: process.env.RELEASE_TAG,
+              });
+
+              core.exportVariable('RELEASE_ID', response.data.id);
+              core.exportVariable('RELEASE_UPLOAD_URL', response.data.upload_url);
+            } catch (error) {
+              core.setFailed(error.message);
+            }
