--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,10 @@ name: "Release"
 run-name: "Build release"
 on:
   push:
+    branches:
+      - main
     tags:
-      - "**"
+      - "v*.*.*"
 jobs:
   release:
     name: "Release"
