--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           script: |
             try {
               const globber = await glob.create('module.json');
-              const file = await globber.glob()[0];
+              const file = await globber.glob();
               core.debug({file});
               core.exportVariable('MODULE_JSON_PATH', file);
             } catch (error) {
