--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 release_id: process.env.RELEASE_ID,
-                name: module.json,
+                name: "module.json",
                 data: process.env.MODULE_JSON_DATA,
               })
             } catch (error) {
