--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,13 @@
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "trailingComma": "es5",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "overrides": [
+    {
+      "files": "**/*.hbs",
+      "options": {
+        "parser": "glimmer"
+      }
+    }
+  ]
 }
