--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.8",
     "stylelint": "^15.8.0",
     "stylelint-config-recess-order": "^4.2.0",
