--- a/.gitignore
+++ b/.gitignore
@@ -72,13 +72,6 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
@@ -132,3 +125,11 @@ dist
 
 # env
 *.env
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# docker
+volumes/*
