--- a/.gitignore
+++ b/.gitignore
@@ -124,12 +124,13 @@ dist
 .DS_Store
 
 # env
-*.env
 .env
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+*.env
+!*.example.env
 
 # docker
 volumes/*
