--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
     ports:
       - 30000:30000/tcp
     volumes:
-      - ${PWD}/volumes/foundry-vtt/data:/data
-      - ${PWD}/src:/data/Data/modules/pretty-mixer
-      - ${PWD}/data:/data/Data/dev_assets
+      - ${PWD}/volumes/foundry-vtt/data:/data # FoundryVTT data
+      - ${PWD}/src:/data/Data/modules/pretty-mixer # THIS plugin
+      - ${PWD}/data:/data/Data/dev_assets # dev assets (music)
     env_file:
       - ${PWD}/foundry.env
