chore: improve docker dev setup

--- a/foundry.example.env
+++ b/foundry.example.env
@@ -4,7 +4,8 @@
 # =========================================================================================
 # FOUNDRY_SSL_CERT="/ssl/foundryvvt_selfsigned.crt"
 # FOUNDRY_SSL_KEY="/ssl/foundryvvt_selfsigned.key"
-FOUNDRY_ADMIN_PASSWORD="0000"
+FOUNDRY_ADMIN_KEY="0000"
 FOUNDRY_USERNAME="YOUR_YOUSERNAME_HERE"
 FOUNDRY_PASSWORD="YOUR_PASSWORD_HERE"
 FOUNDRY_RELEASE_URL="" # bug-fix; keep empty to fix
+CONTAINER_PRESERVE_CONFIG=true
